--- a/public/sass/base/_core.scss
+++ b/public/sass/base/_core.scss
@@ -6,6 +6,9 @@
 .main-content {
   flex: 1;
 }
+.invisible {
+  visibility: hidden;
+}
 .container {
   margin-right: auto;
   margin-left: auto;
