--- a/public/sass/modules/_project_highlight.scss
+++ b/public/sass/modules/_project_highlight.scss
@@ -3,4 +3,7 @@
   height: 452px;
   background-color: $grey;
   margin: 30px 0;
+  img {
+    width: 100%;
+  }
 }
